adjust code style of document

--- a/图书管理系统.md
+++ b/图书管理系统.md
@@ -1,36 +1,40 @@
-# 图书管理系统
+# 图书管理系统开发文档
 
 作者：郭俊贤
 
+实现者：林田川
 
+代码风格：[Google 开源项目风格指南](https://zh-google-styleguide.readthedocs.io/en/latest/)
 
-- ```
-  # 基础指令
-  quit
-  exit
-  
-  # 账户系统指令
-  su [User-ID] ([Password])?
-  logout
-  register [User-ID] [Password] [User-Name]
-  passwd [User-ID] ([Old-Password])? [New-Password]
-  useradd [User-ID] [Password] [Priority] [User-Name]
-  delete [User-ID]
-  
-  # 图书系统指令
-  show (-ISBN=[ISBN] | -name="[Book-Name]" | -author="[Author]" | -keyword="[Keyword]")?
-  buy [ISBN] [Quantity]
-  select [ISBN]
-  modify (-ISBN=[ISBN] | -name="[Book-Name]" | -author="[Author]" | -keyword="[Keyword]" | -price=[Price])+
-  import [Quantity] [Total-Cost]
-  
-  # 日志系统指令
-  report myself
-  show finance ([Time])?
-  report finance
-  report employee
-  log
-  ```
+## 指令列表
+
+```bash
+# 基础指令
+quit
+exit
+
+# 账户系统指令
+su [User-ID] ([Password])?
+logout
+register [User-ID] [Password] [User-Name]
+passwd [User-ID] ([Old-Password])? [New-Password]
+useradd [User-ID] [Password] [Priority] [User-Name]
+delete [User-ID]
+
+# 图书系统指令
+show (-ISBN=[ISBN] | -name="[Book-Name]" | -author="[Author]" | -keyword="[Keyword]")?
+buy [ISBN] [Quantity]
+select [ISBN]
+modify (-ISBN=[ISBN] | -name="[Book-Name]" | -author="[Author]" | -keyword="[Keyword]" | -price=[Price])+
+import [Quantity] [Total-Cost]
+
+# 日志系统指令
+report myself
+show finance ([Time])?
+report finance
+report employee
+log
+```
 
 - 在用户输入一条指令后，如果合法则执行对应操作，如果有则输出操作结果；如果指令非法或操作失败则输出 `Invalid\n`
   - 仅有空白符的指令合法且无输出内容
@@ -38,68 +42,43 @@
 - `quit` 和 `exit` 指令功能为正常退出系统
 
 
+## 数据文件
 
+- `user.dat` 按 User-ID 字典序存 user
+- `book_ISBN.dat` 按 ISBN 升序存 book(class)
+- `book_name.dat` 按 name 升序存 book(ISBN)
+- `book_keyword.dat` 按 Keyword 升序存 book(ISBN)
+- `book_author.dat` 按 Author 升序存 book(ISBN)
+- `log.dat` 自由
 
+## 代码文件
 
-## 1.文件结构
-
-### 存储文件
-
-#### (1)account.dat
-
-按User-ID字典序存account
-
-#### (2)book_ISBN.dat
-
-按ISBN升序存book(class)
-
-#### (3)book_Name.dat
-
-按name升序存book(ISBN)
-
-#### (4)book_Keyword.dat
-
-按Keyword升序存book(ISBN)
-
-#### (5)book_Author.dat
-
-按Author升序存book(ISBN)
-
-#### (6)log.dat
-
-自由
-
-
-
-#### （1）main.cpp
+### main.cpp
 
 读入指令+调用指令处理函数
 
 ```c++
 int main(){
-    CommandManager command_manager;
-    AccountManager account_manager;
-    BookManager book_manager;
-    LogManager log_manager;
+  CommandManager command_manager;
+  UserManager user_manager;
+  BookManager book_manager;
+  Logger logger;
 }
 ```
 
-
-
-#### (2)command_manager.hpp
+### command_manager.h
 
 执行指令
 
 ```c++
 class CommandManager{
  public:
-  void run();  // 运行整个程序，循环读入指令并处理，直到遇到 quit/exit
+  void Run();  // 运行整个程序，循环读入指令并处理，直到遇到 quit/exit
 
  private:
   // 根据指令的第一个单词查找对应的函数，供 run 函数使用
-  std::unordered_map<std::string, std::function<int(const char*)>> map_function;
+  std::unordered_map<std::string, std::function<void(const char*)>> map_function;
 
-  // run 函数调用，返回 0 表示指令合法，返回其他数字表示指令非法
   void ParseSu(const char* cmd);  // 解析 su [User-ID] ([Password])?
   void ParseLogout(const char* cmd);  // 解析 logout
   void ParseRegister(const char* cmd);  // 解析 register [User-ID] [Password] [User-Name]
@@ -121,14 +100,12 @@ class CommandManager{
 };
 ```
 
-
-
-#### (3)account_manager.hpp
+### user_manager.h
 
 实现账户管理+账户文件存储
 
 ```c++
-class AccountManager {
+class UserManager {
  private:
   int user_number;
   vector<char*> online_user;//实现登录栈
@@ -136,17 +113,15 @@ class AccountManager {
 
  public:
   void LogIn(const char* user_id);
-  void LogOut(const char* now_account);
+  void LogOut(const char* now_user);
   void ChangePassword(const char* user_id, const char* old_code);
-  void CreateAccount(const char* user_id, const char* Password, const int& priority, const char* user_name);
-  void Register(const char* set_account, const char* set_password, const char* set_name);
+  void CreateUser(const char* user_id, const char* Password, const int& priority, const char* user_name);
+  void Register(const char* set_user, const char* set_password, const char* set_name);
   void Delete(const char* user_id);
 }
 ```
 
-
-
-#### (4)bookstore.hpp / bookstore.cpp
+### bookstore.h / bookstore.cpp
 
 实现图书信息处理
 
@@ -177,17 +152,15 @@ class BookManager {
 };
 ```
 
-
-
-#### (5)log_manager.hpp
+### logger.h
 
 输出日志
 
 ```cpp
 class Logger {
-  AccountManager& account_manager;
+  UserManager& user_manager;
  public:
-  Logger(AccountManager& account_manager_);
+  Logger(UserManager& user_manager_);
   void ReportMyself();  // 返回员工自己的操作记录，指令
   void ShowFinance(int time = -1);  // 输出财务记录
   void ReportFinance();  // 生成财务记录报告 
@@ -197,46 +170,40 @@ class Logger {
 };
 ```
 
-
-
-#### (6)UnrolledLinkedList.hpp
+### unrolled_linked_list.h
 
 文件读写+块状链表维护
 
 ```c++
 class UnrolledLinkedList{
-    MemoryPool<block> blocklist;
-    struct block{}//存数组
-public:
-    void Split();//block过大时切分
-    void Merge();//block过小时合并
-    void Add();//加入元素
-    void Erase();//删除元素
+  MemoryPool<Block> blocklist;
+  struct Block{}  // 存数组
+ public:
+  void Split();  // block过大时切分
+  void Merge();  // block过小时合并
+  void Add();  // 加入元素
+  void Erase();  // 删除元素
 }
 ```
 
-
-
-#### (7)MemoryPool.hpp
+### memory_pool.h
 
 维护链表中的空余空间
 
 ```c++
 template <typename node_type>
-class MemoryPool{//维护文件中空余空间
-    fstream file;
-    char* file_name;
-    public:
-    void AddBlank();//向file中的空余空间链表加元素，参量待定
-    void DeleteBlank();//向file中的空余空间链表删元素，参量待定
+class MemoryPool{  // 维护文件中空余空间
+  fstream file;
+  char* file_name;
+ public:
+  void AddBlank();  // 向 file 中的空余空间链表加元素，参量待定
+  void DeleteBlank();  // 向 file 中的空余空间链表删元素，参量待定
 }
 ```
 
+### error.h
 
-
-#### (8)Error.hpp
-
-### 异常处理
+异常处理
 
 #### 基础异常类
 
