change the design of data files in doc

--- a/图书管理系统.md
+++ b/图书管理系统.md
@@ -45,10 +45,11 @@ log
 ## 数据文件
 
 - `user.dat` 按 User-ID 字典序存 user
-- `book_ISBN.dat` 按 ISBN 升序存 book(class)
-- `book_name.dat` 按 name 升序存 book(ISBN)
-- `book_keyword.dat` 按 Keyword 升序存 book(ISBN)
-- `book_author.dat` 按 Author 升序存 book(ISBN)
+- `books.dat` 储存的书本信息
+- `book_ISBN.dat` 按 ISBN 升序存书本在 `books.dat` 中的位置
+- `book_name.dat` 按 name 升序存书本的在 `books.dat` 中的位置
+- `book_keyword.dat` 按 Keyword 升序存书本的在 `books.dat` 中的位置
+- `book_author.dat` 按 Author 升序存书本的在 `books.dat` 中的位置
 - `log.dat` 自由
 
 ## 代码文件
