--- a/图书管理系统.md
+++ b/图书管理系统.md
@@ -60,48 +60,48 @@ log
 
 ```c++
 int main(){
-  CommandManager command_manager;
+  CommandParser command_parser;
   UserManager user_manager;
   BookManager book_manager;
   Logger logger;
 }
 ```
 
-### command_manager.h
+### command_parser.h / command_parser.cpp
 
 执行指令
 
 ```c++
-class CommandManager{
+class CommandParser{
  public:
   void Run();  // 运行整个程序，循环读入指令并处理，直到遇到 quit/exit
 
  private:
   // 根据指令的第一个单词查找对应的函数，供 run 函数使用
-  std::unordered_map<std::string, std::function<void(const char*)>> map_function;
+  std::unordered_map<std::string, void (CommandParser::*)(const std::vector<std::string> &)> map_function;
 
-  void ParseSu(const char* cmd);  // 解析 su [User-ID] ([Password])?
-  void ParseLogout(const char* cmd);  // 解析 logout
-  void ParseRegister(const char* cmd);  // 解析 register [User-ID] [Password] [User-Name]
-  void ParsePasswd(const char* cmd);  // 解析 passwd [User-ID] ([Old-Password])? [New-Password]
-  void ParseUseradd(const char* cmd);  // 解析 useradd [User-ID] [Password] [Priority] [User-Name]
-  void ParseDelete(const char* cmd);  // 解析 delete [User-ID]
+  void ParseSu(const std::vector<std::string> &args);  // 解析 su [User-ID] ([Password])?
+  void ParseLogout(const std::vector<std::string> &args);  // 解析 logout
+  void ParseRegister(const std::vector<std::string> &args);  // 解析 register [User-ID] [Password] [User-Name]
+  void ParsePasswd(const std::vector<std::string> &args);  // 解析 passwd [User-ID] ([Old-Password])? [New-Password]
+  void ParseUseradd(const std::vector<std::string> &args);  // 解析 useradd [User-ID] [Password] [Priority] [User-Name]
+  void ParseDelete(const std::vector<std::string> &args);  // 解析 delete [User-ID]
 
-  void ParseShow(const char* cmd);  // 解析 show，调用 showBook 或 showFinance
+  void ParseShow(const std::vector<std::string> &args);  // 解析 show，调用 showBook 或 showFinance
 
-  void ParseShowBook(const char* cmd);  // 解析 show (-ISBN=[ISBN] | -name="[Book-Name]" | -author="[Author]" | -keyword="[Keyword]")?
-  void ParseBuy(const char* cmd);  // 解析 buy [ISBN] [Quantity]
-  void ParseSelect(const char* cmd);  // 解析 select [ISBN]
-  void ParseModify(const char* cmd);  // 解析 modify (-ISBN=[ISBN] | -name="[Book-Name]" | -author="[Author]" | -keyword="[Keyword]" | -price=[Price])+
-  void ParseImport(const char* cmd);  // 解析 import [Quantity] [Total-Cost]
+  void ParseShowBook(const std::vector<std::string> &args);  // 解析 show (-ISBN=[ISBN] | -name="[Book-Name]" | -author="[Author]" | -keyword="[Keyword]")?
+  void ParseBuy(const std::vector<std::string> &args);  // 解析 buy [ISBN] [Quantity]
+  void ParseSelect(const std::vector<std::string> &args);  // 解析 select [ISBN]
+  void ParseModify(const std::vector<std::string> &args);  // 解析 modify (-ISBN=[ISBN] | -name="[Book-Name]" | -author="[Author]" | -keyword="[Keyword]" | -price=[Price])+
+  void ParseImport(const std::vector<std::string> &args);  // 解析 import [Quantity] [Total-Cost]
 
-  void ParseReport(const char* cmd);  // 解析 report myself 或 report finance 或 report employee
-  void ParseShowFinance(const char* cmd);  // 解析 show finance ([Time])?
-  void ParseLog(const char* cmd);  // 解析 log
+  void ParseReport(const std::vector<std::string> &args);  // 解析 report myself 或 report finance 或 report employee
+  void ParseShowFinance(const std::vector<std::string> &args);  // 解析 show finance ([Time])?
+  void ParseLog(const std::vector<std::string> &args);  // 解析 log
 };
 ```
 
-### user_manager.h
+### user_manager.h / user_manager.cpp
 
 实现账户管理+账户文件存储
 
