[doc] Introduce `Bookstore` and `Char`

--- a/图书管理系统.md
+++ b/图书管理系统.md
@@ -56,15 +56,71 @@ log
 
 ### main.cpp
 
-读入指令+调用指令处理函数
+基本上是个空壳子。
 
 ```c++
+#include "bookstore.h"
 int main(){
-  CommandParser command_parser;
-  UserManager user_manager;
-  BookManager book_manager;
-  Logger logger;
+  Bookstore bookstore;
+  bookstore.Run();
 }
+```
+
+### bookstore.h / bookstore.cpp
+
+书店类。存了 `CommandParser`、`UserManager`、`BookManager` 和 `Logger` 类的指针。它们各自也存了 `Bookstore` 的指针，这样它们就可以通过 `Bookstore` 来相互调用。
+
+例如，`Logger` 类中的 `ShowFinance` 等操作需要调用 `UserManager` 来鉴权，同时 `UserManager` 类也需要调用 `Logger` 来记录用户的操作。这几个类之间有复杂的相互调用关系，所以都通过 `Bookstore` 来调用会更清楚一点。
+
+bookstore.h 大概长这样：
+
+```c++
+#include "book_manager.h"
+#include "command_parser.h"
+#include "logger.h"
+#include "user_manager.h"
+
+class Bookstore {
+  Logger *logger;
+  UserManager *user_manager;
+  BookManager *book_manager;
+  CommandParser *command_parser;
+
+ public:
+  Bookstore();  // 把 Logger, UserManager, BookManager, CommandParser 都 new 出来
+  ~Bookstore();  // 别忘了 delete
+  void Run();  // 就是调用 command_parser 的 Run
+};
+```
+
+### char.h
+
+`Char<size>` 是对 `char[size + 1]` 的包装，用来存一个定长的字符串。重载了比较运算符和流提取、流插入运算符，用起来更方便。
+
+```c++
+template<const int size>
+class Char {
+  char content[size + 1];
+
+ public:
+  // 默认为空字符串
+  Char();
+  Char(const std::string &s);
+  Char(const char *cstr);
+  operator std::string() const;
+  std::string str() const;
+
+  Char &operator=(const Char &that);
+  bool empty() const;
+  friend bool operator<(const Char<size> &a, const Char<size> &b);
+  friend bool operator==(const Char<size> &a, const Char<size> &b);
+  friend bool operator>(const Char<size> &a, const Char<size> &b);
+  friend bool operator<=(const Char<size> &a, const Char<size> &b);
+  friend bool operator>=(const Char<size> &a, const Char<size> &b);
+  friend bool operator!=(const Char<size> &a, const Char<size> &b);
+  friend std::istream &operator>>(std::istream &is, Char<size> &s);
+  friend std::ostream &operator<<(std::ostream &os, const Char<size> &s);
+};
 ```
 
 ### command_parser.h / command_parser.cpp
@@ -107,19 +163,22 @@ class CommandParser{
 
 ```c++
 class UserManager {
- private:
-  int user_number;
-  vector<char*> online_user;//实现登录栈
-  User current_user;
-
  public:
-  void LogIn(const char* user_id);
-  void LogOut(const char* now_user);
-  void ChangePassword(const char* user_id, const char* old_code);
-  void CreateUser(const char* user_id, const char* Password, const int& priority, const char* user_name);
-  void Register(const char* set_user, const char* set_password, const char* set_name);
-  void Delete(const char* user_id);
-}
+  void Login(const Char<30> &user_id, const Char<30> &password = "");  // 登录用户
+  void Logout();  // 退出登录
+  void ChangePassword(const Char<30> &user_id, const Char<30> &new_password);  // 修改密码
+  void ChangePassword(const Char<30> &user_id, const Char<30> &old_password, const Char<30> &new_password);  // 修改密码
+  void CreateUser(const Char<30> &user_id, const Char<30> &password,
+                  const int priority, const Char<30> &user_name);  // 创建用户
+  void Register(const Char<30> &user_id, const Char<30> &password, const Char<30> &user_name);  // 注册账户
+  void Remove(const Char<30> &user_id);  // 删除账户
+  void CheckPermission(int priority) const;  // 检查当前用户的权限是否 >= priority，如果不是抛出异常
+  void SelectBook(std::streamoff book_offset);  // 让当前用户选这本书。调用此函数前应保证已经鉴权
+  std::streamoff GetSelectedBook() const;  // 获取当前用户选择的书。0 表示没选。
+ private:
+  std::vector<std::pair<User, std::streamoff>> user_stack;  // 用户栈，储存登录的用户和他所选的图书的 offset
+  UnrolledLinkedList<Char<30>, User> user_data;
+};
 ```
 
 ### bookstore.h / bookstore.cpp
@@ -129,26 +188,30 @@ class UserManager {
 ```cpp
 class Book {
  public:
-  char ISBN[21];
-  char name[61], author[61];
-  char keyword[61];
-  int quantity, price;
+  Char<20> ISBN;
+  Char<60> name, author;
+  Char<60> keyword;
+  int quantity = 0;
+  double price = 0.0;
 };
 ```
 
 ```cpp
 class BookManager {
- private:
-  Book selected_book;
-  Logger& logger;
  public:
-  BookManager(Logger& logger_);
-  enum ParaType {ISBN, NAME, AUTHOR, KEYWORD};  // 参数类型
-  int ShowBook(ParaType para_type, const char* arg);  // 检索图书
-  void BuyBook(const char* ISBN, int quantity);  // 购买图书
-  void SelectBook(const char* ISBN);  // 以当前账户选中指定图书
-  void ModifyBook(ParaType para_type, const char* arg);  // 更新选中图书的信息
-  void ModifyBook(ParaType para_type, int price);  // 更新选中图书的信息
+  enum ArgType { ISBN, NAME, AUTHOR, KEYWORD, PRICE };  // 参数类型
+  struct Argument {
+    ArgType type;
+    const std::string *value;
+    int price;
+    Argument(ArgType type, const std::string &value) : type(type), value(&value), price() {}
+    Argument(ArgType type, int price) : type(type), price(price), value(nullptr) {}
+  };
+  void ShowAllBooks();  // 输出所有图书
+  void ShowBook(Argument arg);  // 检索图书
+  void BuyBook(const std::string &ISBN, int quantity);  // 购买图书
+  void SelectBook(const std::string &ISBN);  // 以当前账户选中指定图书
+  void ModifyBook(std::vector<Argument> &args);  // 更新选中图书的信息
   void ImportBook(int quantity, double total_cost);  // 指定交易总额购入指定数量的选中图书
 };
 ```
@@ -159,7 +222,6 @@ class BookManager {
 
 ```cpp
 class Logger {
-  UserManager& user_manager;
  public:
   Logger(UserManager& user_manager_);
   void ReportMyself();  // 返回员工自己的操作记录，指令
@@ -180,8 +242,8 @@ class UnrolledLinkedList{
   MemoryPool<Block> blocklist;
   struct Block{}  // 存数组
  public:
-  void Split();  // block过大时切分
-  void Merge();  // block过小时合并
+  void Split();  // block 过大时切分
+  void Merge();  // block 过小时合并
   void Add();  // 加入元素
   void Erase();  // 删除元素
 }
@@ -202,7 +264,7 @@ class MemoryPool{  // 维护文件中空余空间
 }
 ```
 
-### error.h
+### exceptions.h
 
 异常处理
 
@@ -221,21 +283,29 @@ class BasicException : public std::exception {
 #### 指令解析异常
 
 ```cpp
+// 指令太长（超出一行 1024 字节的限制）
+class CommandTooLong : public BasicException {};
 // 格式错误
 class SyntaxError : public BasicException {};
 ```
+
+注：唯一一个会在 `CommandParser` 外面抛出 `SyntaxError` 异常的是 `BookManager::ModifyBook` 中检查 keyword 的部分。
 
 #### 用户管理异常
 
 ```cpp
 // 密码错误
 class IncorrectPassword : public BasicException {};
-// 用户名已存在
-class DuplicateUsername : public BasicException {};
-// 用户名不存在
+// 没有已登录用户
+class NoLoggedInUser : public BasicException {};
+// 用户已存在
+class DuplicateUserID : public BasicException {};
+// 用户不存在
 class UserNotExist : public BasicException {};
 // 权限错误
 class PermissionError : public BasicException {};
+// 删除已登录的用户
+class DeleteMyself : public BasicException {};
 ```
 
 #### 图书管理异常
@@ -245,6 +315,10 @@ class PermissionError : public BasicException {};
 class NoBookMatched : public BasicException {};
 // 未选择图书
 class NoBookSelected : public BasicException {};
+// 库存不足
+class StockInsufficient : public BasicException {};
+// ISBN 已存在
+class DuplicateISBN : public BasicException {};
 ```
 
 #### 日志异常
