[doc] Update classes dealing with file IO

--- a/图书管理系统.md
+++ b/图书管理系统.md
@@ -258,34 +258,76 @@ class Logger {
 };
 ```
 
-### unrolled_linked_list.h
+### basic_file_io.h
 
-文件读写+块状链表维护
+一个更好用的 `fstream`。主要是用模板函数写的 `Read` 和 `Write` 用起来更方便。
 
 ```c++
-class UnrolledLinkedList{
-  MemoryPool<Block> blocklist;
-  struct Block{}  // 存数组
+class BasicFileIO {
+  const std::string filename;
+  std::fstream file;
+
  public:
-  void Split();  // block 过大时切分
-  void Merge();  // block 过小时合并
-  void Add();  // 加入元素
-  void Erase();  // 删除元素
-}
+  BasicFileIO(const std::string filename_) : filename(filename_) {};
+  void open(std::ios_base::openmode mode);
+  void close();
+  void seekg(std::streamoff offset, std::ios_base::seekdir dir);
+  void seekp(std::streamoff offset, std::ios_base::seekdir dir);
+  std::streampos tellp();
+  std::streampos tellg();
+
+  // 从文件中读出 sizeof(T) 字节的内容放入所给变量，需要确保调用时已经打开了文件
+  template<class T>
+  void Read(T &content);
+  // 从文件中读出 sizeof(T) 字节的内容放入所给变量，需要确保调用时已经打开了文件
+  template<class T>
+  void Read(T &content, std::streamoff pos);
+  // 将 &T 开头的 sizeof(T) 字节的内容写入所给文件，需要确保调用时已经打开了文件
+  template<class T>
+  void Write(const T &content);
+  // 将 &T 开头的 sizeof(T) 字节的内容写入所给文件，需要确保调用时已经打开了文件
+  template<class T>
+  void Write(const T &content, std::streamoff pos);
+};
+
 ```
 
-### memory_pool.h
+### block_storage.h
 
-维护链表中的空余空间
+派生自 `BasicFileIO`，用来存操作记录和书本信息。每次写入都追加到文件末尾，并返回写入位置的 offset。
+
+文件开头预留 `info_size` 大小的空间，称为信息区，用来存一些额外的信息，例如文件中存储的对象总数。
+
+```cpp
+template <class T>
+class BlockStorage : public BasicFileIO {
+  std::streamoff info_size;  // 文件开头预留的信息区大小
+
+ public:
+  explicit BlockStorage(const std::string &filename);
+  std::streamoff Add(const T &element);
+  void Update(const T &element, std::streamoff offset);
+  void Get(T &element, std::streamoff offset);
+  int GetSize();
+  void GetLastN(int n, std::vector<T> &result);
+  void GetAll(std::vector<T> &result);
+};
+```
+
+### unrolled_linked_list.h
+
+块状链表维护
 
 ```c++
-template <typename node_type>
-class MemoryPool{  // 维护文件中空余空间
-  fstream file;
-  char* file_name;
+template <typename KeyType, typename ValueType, const int kBlockSize>
+class UnrolledLinkedList{
  public:
-  void AddBlank();  // 向 file 中的空余空间链表加元素，参量待定
-  void DeleteBlank();  // 向 file 中的空余空间链表删元素，参量待定
+  void Add(const KeyType &key, const ValueType &value);
+  void Remove(const KeyType &key, const ValueType &value);
+  void FindAll(const KeyType &key, std::vector<ValueType> &result);
+  void GetAll(std::vector<ValueType> &result);
+  // Warning: Don't use this function when key is not unique
+  void Update(const KeyType &key, const ValueType &value);
 }
 ```
 
@@ -295,7 +337,7 @@ class MemoryPool{  // 维护文件中空余空间
 
 #### 基础异常类
 
-作为其他异常类的基类
+作为其他异常类的基类。
 
 ```cpp
 class BasicException : public std::exception {
