[doc] Add `ANSI`

--- a/图书管理系统.md
+++ b/图书管理系统.md
@@ -220,6 +220,55 @@ class BookManager {
 };
 ```
 
+### ansi.h
+
+通过 ANSI 代码调整输出样式。
+
+`ANSI` 类中定义了枚举类型 `Code`，用来记录 ANSI 代码。
+
+```cpp
+class ANSI {
+ public:
+  enum Code {
+    // 重置样式
+    RESET = 0,
+    // 字体样式 font style
+    BOLD = 1,
+    DIM = 2,
+    ITALICS = 3,
+    ...
+    // 前景颜色 foreground color
+    FG_DEFAULT = 39,
+    FG_BLACK = 30,
+    FG_RED = 31,
+    FG_GREEN = 32,
+    ...
+    // 背景颜色 background color
+    BG_RED = 41,
+    BG_GREEN = 42,
+    ...
+  };
+
+ public:
+  template <typename... Args>
+  ANSI(const std::string& text, Args&&... args) : text(text), data{std::forward<Args>(args)...} {}
+  friend std::ostream& operator<<(std::ostream& os, const ANSI& x);
+
+ private:
+  const std::string& text;
+  std::vector<Code> data;
+};
+
+std::ostream& operator<<(std::ostream& os, ANSI::Code x);
+```
+
+用法有两种：
+
+```cpp
+std::cout << ANSI("bold red text", ANSI::BOLD, ANSI::FG_RED);
+std::cout << ANSI::BOLD << ANSI::FG_RED << "bold red text" << ANSI::RESET;
+```
+
 ### logger.h
 
 日志类。
@@ -230,7 +279,7 @@ class BookManager {
 
 其中 `[time]` 格式为 `%Y-%m-%d %H:%M:%S`，例如 `2021-12-07 20:05:25`；若当前没有已登陆的用户，则 `[user-id]` 为 `<guest>`；`(success|fail)` 表示该指令是否正常执行；`[command]` 为输入的指令。
 
-样例：
+样例（样例是彩色的，但是 Github 会过滤掉 style 属性，所以看不到颜色）：
 
 <pre><span style="opacity: 0.5;">[2021-09-01 08:30:00]</span> <b>guest</b> <span style="color: green;">success</span> <b>su</b> root sjtu
 <span style="opacity: 0.5;">[2021-09-01 08:30:05]</span> <b>root</b> <span style="color: green;">success</span> <b>select</b> 978-7-115-42935-3
