[doc] Add details

--- a/图书管理系统.md
+++ b/图书管理系统.md
@@ -44,19 +44,25 @@ log
 
 ## 数据文件
 
-以下文件都放在 `data` 目录下。
+数据文件都放在 `data` 目录下。
+
+这些是用 `BlockStorage` 存的：
+
+- `books.dat` 储存的书本信息
+- `finance.dat` 交易记录
+- `command_log.dat` 操作记录
+
+这些是用块状链表存的：
 
 - `user.dat` 按 User-ID 字典序存 user
-- `books.dat` 储存的书本信息
 - `book_ISBN.dat` 按 ISBN 升序存书本在 `books.dat` 中的位置
 - `book_name.dat` 按 name 升序存书本的在 `books.dat` 中的位置
 - `book_keyword.dat` 按 Keyword 升序存书本的在 `books.dat` 中的位置
 - `book_author.dat` 按 Author 升序存书本的在 `books.dat` 中的位置
-- `finance.dat` 交易记录
-- `command_log.dat` 操作记录
-
 
 ## 代码文件
+
+代码文件都放在 `src` 目录下。
 
 ### main.cpp
 
